--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "axios": "0.21.4",
     "react": "^17",
     "react-dom": "^17",
+    "react-redux": "7.2.5",
     "react-router-dom": "6",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.0.8",
     "react-use-localstorage": "3.5.3",
     "typescript": "^4.8.3",
     "web-vitals": "^2.1.4"
